fix alignement des boutons

--- a/src/app/protected/etapes-simulation/5.resultat-simulation/actions-suite/actions-suite.component.scss
+++ b/src/app/protected/etapes-simulation/5.resultat-simulation/actions-suite/actions-suite.component.scss
@@ -13,10 +13,4 @@
     padding: 0rem;  
  }
 
- .carte {
-   margin: 4px;
-   @media #{$extra-small-device} {
-     margin-left: 0;
-     margin-right: 0;
-   }
- }
+
