--- a/src/app/protected/etapes-simulation/5.resultat-simulation/actions-suite/mettre-a-jour-profil/mettre-a-jour-profil.component.scss
+++ b/src/app/protected/etapes-simulation/5.resultat-simulation/actions-suite/mettre-a-jour-profil/mettre-a-jour-profil.component.scss
@@ -1,2 +1,19 @@
 @import "../../../../../../assets/scss/variables";
 
+.card-body-btn-action{
+    @media #{$extra-small-device} {
+        padding-left: 0;
+        padding-right: 0;
+     }
+}
+
+.card-action-suite{
+    padding-bottom: 0;
+}
+
+.btn-action-suite{
+    @media #{$extra-small-device} {
+       margin-left: 0;
+       margin-right: 0;
+    }
+ }
